--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="icon" type="image/png" href="img/favicon.png">
-<link rel="stylesheet"  href="https://takayan6.github.io/takayan6.github.io/css/ress.min.css" />
-<link rel="stylesheet"  href="https://takayan6.github.io/takayan6.github.io/style.css"/>
+<link rel="stylesheet"  href="https://takayan6.github.io/takayan6github.io/css/ress.min.css" />
+<link rel="stylesheet"  href="https://takayan6.github.io/takayan6github.io/style.css"/>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 	
