--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="js/style.js"></script>
 	
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="https://github.com/takayan6/takayan6github.io/blob/main/favicon.png?raw=true">
+<link rel="icon" type="image/png" href="img/favicon.png">
     
 </head>
 <body>
