--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="">
 <link rel="icon" type="image/png" href="img/favicon.png">
 <link rel="stylesheet"  href="https://takayan6.github.io/test/css/ress.min.css" />
-<link rel="stylesheet"  href="https://takayan6.github.io/test/style.css"/>
+<link href="./CSS/index.css" rel="stylesheet">
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 	
