--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="icon" type="image/png" href="img/favicon.png">
-<link rel="stylesheet"  href="https://takayan6.github.io/test/css/ress.min.css" />
+<link href="./CSS/grid.css" rel="stylesheet">
 <link href="./CSS/index.css" rel="stylesheet">
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
