--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="icon" type="image/png" href="img/favicon.png">
-<link href="./CSS/grid.css" rel="stylesheet">
-<link href="./CSS/index.css" rel="stylesheet">
+<link rel="stylesheet" media="all" href="css/ress.min.css" />
+<link rel="stylesheet" media="all" href="css/style.css" />
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 	
