--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="icon" type="image/png" href="img/favicon.png">
-<link rel="stylesheet" media="all" href="css/ress.min.css"/>
+<link rel="stylesheet" href="./ress.min.css"/>
 <link rel="stylesheet" href="./style.css"/>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
