--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 </header>
     <div class="mainimg">
-              <img src="https://github.com/takayan6/test/blob/main/mainimg.jpg?raw=true" alt="メイン画像">  
+              <img src="img/mainimg.jpg" alt="メイン画像">  
         </div>
     <main>
         <div class="catch">
