--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="container center">
 <div class="row">
     <div class="col span-4">
-		<img src="img/thema1.jpg" alt="宇宙遊泳">
+		<img src="https://github.com/takayan6/test/blob/main/thema1.jpg?raw=true" alt="宇宙遊泳">
 		<h3>宇宙遊泳</h3>
 		<p>宇宙空間を漂いながら無の境地を味わいませんか</p>
     </div>
