--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Message</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
 <link rel="stylesheet" href="./ress.min.css"/>
 <link rel="stylesheet" href="./style.css"/>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 	
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
     
 </head>
 <body>
@@ -21,7 +21,7 @@
 <div class="container">
 <div class="row">
     <div class="col span-12 header">
-        <a href=""><img src="img/logo.png" alt="ロゴ画像"></a>
+        <a href=""><img src="https://github.com/takayan6/test/blob/main/logo.jpg?raw=true"" alt="ロゴ画像"></a>
 		        </div>
     </div>
 <div class="row">
@@ -46,7 +46,7 @@
     </div>
 </header>
     <div class="mainimg">
-              <img src="img/mainimg.jpg" alt="メイン画像">  
+              <img src="https://github.com/takayan6/test/blob/main/maining.jpg?raw=true"" alt="メイン画像">  
         </div>
     <main>
         <div class="catch">
@@ -59,17 +59,17 @@
 <div class="container center">
 <div class="row">
     <div class="col span-4">
-		<img src="img/plan1.jpg" alt="月">
+		<img src="https://github.com/takayan6/test/blob/main/plan1.jpg?raw=true"" alt="月">
 		<h3>Moon</h3>
 		<p>人類の新たな歴史を刻む、月への旅</p>
     </div>
     <div class="col span-4">
-		<img src="img/plan2.jpg" alt="火星">
+		<img src="https://github.com/takayan6/test/blob/main/plan2.jpg?raw=true"" alt="火星">
 		<h3>Mars</h3>
 		<p>人類の次の一歩、火星への旅</p>
     </div>
     <div class="col span-4">
-		<img src="img/plan3.jpg" alt="木星">
+		<img src="https://github.com/takayan6/test/blob/main/plan3.jpg?raw=true"" alt="木星">
 		<h3>Jupiter</h3>
 		<p>太陽系最大の惑星、木星の神秘に迫る</p>
     </div>
@@ -87,12 +87,12 @@
 		<p>宇宙空間を漂いながら無の境地を味わいませんか</p>
     </div>
     <div class="col span-4">
-		<img src="img/thema2.jpg" alt="採集">
+		<img src="https://github.com/takayan6/test/blob/main/thema2.jpg?raw=true" alt="採集">
 		<h3>採集</h3>
 		<p>地上に持ち帰り研究で未知の元素に出会えるかも</p>
     </div>
     <div class="col span-4">
-		<img src="img/thema3.jpg" alt="未知との遭遇">
+		<img src="https://github.com/takayan6/test/blob/main/thema3.jpg?raw=true" alt="未知との遭遇">
 		<h3>未知との遭遇</h3>
 		<p>人類の友となるか、未知の生物</p>
     </div>
@@ -105,14 +105,14 @@
 <div class="container">
 <div class="row flow">
     <div class="col span-3">
-		<img src="img/schedule1.jpg" alt="医学的チェックや訓練">
+		<img src="ihttps://github.com/takayan6/test/blob/main/schedule1.jpg?raw=true" alt="医学的チェックや訓練">
     </div>
     <div class="col span-9"><p>宇宙旅行の前に、必要な医学的チェックや訓練を行います。<br>この準備期間は、お客様が宇宙飛行に十分に準備されるために重要です。</p>
     </div>
     </div>	
 <div class="row flow">
     <div class="col span-3">
-		<img src="img/schedule2.jpg" alt="コックピット訓練">
+		<img src="ihttps://github.com/takayan6/test/blob/main/schedule2.jpg?raw=true" alt="コックピット訓練">
     </div>
     <div class="col span-9"><p>操縦席はオートマティックですが万が一のため、操縦を覚える必要があります。<br>
 		これも何が起こるか分からない宇宙空間で、万が一に備え十分に訓練する必要があります。</p>
@@ -120,7 +120,7 @@
     </div>
 <div class="row flow">
     <div class="col span-3">
-		<img src="img/schedule3.jpg" alt="発射">
+		<img src="ihttps://github.com/takayan6/test/blob/main/schedule3.jpg?raw=true" alt="発射">
     </div>
     <div class="col span-9"><p>カウントダウンが始まり、宇宙船が発射台に取り付けられ、準備が整います。<br>
 		サイエンティフィックな雰囲気ともに、モジュールが点灯され、発射がスタートします。</p>
@@ -148,13 +148,13 @@
 <div class="row">
     <div class="col span-6">
 		<div class="contact-box">
-		<p><img src="img/tel.png" alt="電話"></p>
+		<p><img src="ihttps://github.com/takayan6/test/blob/main/tel.png?raw=true" alt="電話"></p>
 		<p>012-345-6789</p>
 		</div>
     </div>
 	<div class="col span-6">
 		<div class="contact-box">
-		<p><img src="img/mail.png" alt="Eメール"></p>
+		<p><img src="ihttps://github.com/takayan6/test/blob/main/mail.png?raw=true" alt="Eメール"></p>
 		<p>message@mail.com</p>
 		</div>
     </div>
