--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container">
 <div class="row">
     <div class="col span-12 header">
-        <a href=""><img src="https://github.com/takayan6/test/blob/main/logo.jpg?raw=true"" alt="ロゴ画像"></a>
+        <a href=""><img src="https://github.com/takayan6/test/blob/main/logo.png?raw=true"" alt="ロゴ画像"></a>
 		        </div>
     </div>
 <div class="row">
@@ -46,7 +46,7 @@
     </div>
 </header>
     <div class="mainimg">
-              <img src="https://github.com/takayan6/test/blob/main/maining.jpg?raw=true"" alt="メイン画像">  
+              <img src="https://github.com/takayan6/test/blob/main/maining.png?raw=true"" alt="メイン画像">  
         </div>
     <main>
         <div class="catch">
