--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 <div class="row">
     <div class="col span-6">
 		<div class="contact-box">
-		<p><img src="ihttps://github.com/takayan6/test/blob/main/tel.png?raw=true" alt="電話"></p>
+		<p><img src="https://github.com/takayan6/test/blob/main/tel.png?raw=true" alt="電話"></p>
 		<p>012-345-6789</p>
 		</div>
     </div>
 	<div class="col span-6">
 		<div class="contact-box">
-		<p><img src="ihttps://github.com/takayan6/test/blob/main/mail.png?raw=true" alt="Eメール"></p>
+		<p><img src="https://github.com/takayan6/test/blob/main/mail.png?raw=true" alt="Eメール"></p>
 		<p>message@mail.com</p>
 		</div>
     </div>
