--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 <div class="container">
 <div class="row flow">
     <div class="col span-3">
-		<img src="ihttps://github.com/takayan6/test/blob/main/schedule1.jpg?raw=true" alt="医学的チェックや訓練">
+		<img src="https://github.com/takayan6/test/blob/main/schedule1.jpg?raw=true" alt="医学的チェックや訓練">
     </div>
     <div class="col span-9"><p>宇宙旅行の前に、必要な医学的チェックや訓練を行います。<br>この準備期間は、お客様が宇宙飛行に十分に準備されるために重要です。</p>
     </div>
     </div>	
 <div class="row flow">
     <div class="col span-3">
-		<img src="ihttps://github.com/takayan6/test/blob/main/schedule2.jpg?raw=true" alt="コックピット訓練">
+		<img src="https://github.com/takayan6/test/blob/main/schedule2.jpg?raw=true" alt="コックピット訓練">
     </div>
     <div class="col span-9"><p>操縦席はオートマティックですが万が一のため、操縦を覚える必要があります。<br>
 		これも何が起こるか分からない宇宙空間で、万が一に備え十分に訓練する必要があります。</p>
@@ -120,7 +120,7 @@
     </div>
 <div class="row flow">
     <div class="col span-3">
-		<img src="ihttps://github.com/takayan6/test/blob/main/schedule3.jpg?raw=true" alt="発射">
+		<img src="https://github.com/takayan6/test/blob/main/schedule3.jpg?raw=true" alt="発射">
     </div>
     <div class="col span-9"><p>カウントダウンが始まり、宇宙船が発射台に取り付けられ、準備が整います。<br>
 		サイエンティフィックな雰囲気ともに、モジュールが点灯され、発射がスタートします。</p>
