--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
 <link rel="stylesheet" href="./ress.min.css"/>
 <link rel="stylesheet" href="./style.css"/>
+<link rel="stylesheet" href="./style.js"/>	
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 	
