--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
-<link rel="stylesheet" media="all" href="./ress.min.css"/>
-<link rel="stylesheet" media="all" href="./style.css"/>
+<link rel="stylesheet" href="./ress.min.css"/>
+<link rel="stylesheet" href="./style.css"/>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 	
