--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
 <link rel="stylesheet" href="./ress.min.css"/>
 <link rel="stylesheet" href="./style.css"/>
-<link rel="stylesheet" href="./style.js">	
 <script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/style.js"></script>
+<script src="./js/style.js"></script>
 	
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
