--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="./ress.min.css"/>
 <link rel="stylesheet" href="./style.css"/>
 <script src="./jquery-3.6.0.min.js"></script>
-<script src="https://takayan6.github.io/test/js/style.js"></script>
+<script src="./style.js"></script>
 	
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://github.com/takayan6/test/blob/main/favicon.png?raw=true">
